# src/app.controller.ts
@@ -1,0 +1,9 @@
+import { Controller, Get } from "@nestjs/common";
+
+@Controller()
+export class AppController {
+	@Get("health")
+	healthCheck() {
+		return;
+	}
+}
